--- a/website/epubit/static/scss/style.scss
+++ b/website/epubit/static/scss/style.scss
@@ -20,6 +20,21 @@ $nav-hover2: #008c7d;
 
 body{ background-color: $body-bg; font-size: 12px; line-height: 1.5em;}
 
+.ico{
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	width: 20px;
+	height: 20px;
+	vertical-align: middle;
+	background: url(../images/ico.png) no-repeat;
+}
+
+.wp50{
+	width: 50px!important;
+	height: 50px!important;
+}
+
 .text-muted{
 	color: #999;
 	&:hover{
@@ -30,13 +45,14 @@ body{ background-color: $body-bg; font-size: 12px; line-height: 1.5em;}
 .offsetp5{ padding-left: 5px}
 .offsetp10{ padding-left: 10px}
 .blk5{ height: 5px; width: 100%; overflow: hidden;}
+.blk10{ height: 10px; width: 100%; overflow: hidden;}
 .blk15{ height: 15px; width: 100%; overflow: hidden;}
 .l-panel{
 	float: left;
 }
 
 .r-panel{
-	float: right;
+	float: right!important;
 }
 .mb10{
 	margin-bottom: 10px;
@@ -400,6 +416,27 @@ body{ background-color: $body-bg; font-size: 12px; line-height: 1.5em;}
 			color: $red;
 		}
 	}
+	.author-lst{
+		font-size: 14px;
+		padding-bottom: 15px;
+		li{
+			padding-top: 5px;
+		}
+		img{
+			width: 100px;
+			height: 100px;
+			max-width: none;
+		}
+		a{
+			color: #333;
+		}
+		.name{
+			font-weight: bold;
+		}
+	}
+	.author-side{
+		padding: 0 15px;
+	}
 }
 
 // 编辑推荐
@@ -434,6 +471,20 @@ body{ background-color: $body-bg; font-size: 12px; line-height: 1.5em;}
 		.bd{
 			padding: 0;
 		}
+	}
+	.price-box{
+		white-space: nowrap;
+		border-left: 1px solid $borColor2;
+		padding: 5px 0 5px 15px;
+		margin-left: 10px;
+		.price{
+			color: $green;
+			font-size: 14px;
+			line-height: 26px;
+		}
+	}
+	.media-body{
+		padding-top: 10px;
 	}
 }
 
@@ -748,7 +799,6 @@ footer{
 }
 
 .tablst{
-	padding-left: 5px; 
 	a{
 		color: $global-FontMainColor;
 		&:hover{
@@ -805,11 +855,38 @@ footer{
 			font-size: 14px;
 			float: left;
 		}
-		.t-con{
-			font-size: 14px;
-			padding: 15px 20px;
-			float: left;
-			color: $green;
+		.r-tab{
+			height: 48px;
+			border-left: 1px solid $borColor2;
+			padding: 0 10px 0 5px;
+			li{
+				display: inline-block;
+				*display: inline;
+				zoom: 1;
+				font-size: 12px;
+				padding: 12px 0;
+				a{
+					color: #333;
+					text-decoration: none;
+					display: block;
+					padding: 3px 5px;
+					&:hover{
+						text-decoration: none;
+					}
+					.glyphicon{
+						visibility: hidden;
+						margin-right: 5px;
+					}
+				}
+				&.active{
+					a{
+						color: $green;
+					}
+					.glyphicon{
+						visibility: visible;
+					}
+				}
+			}
 		}
 	}
 	.media{
@@ -820,10 +897,38 @@ footer{
 	}
 	.catetab{
 		margin: 0 15px;
-		border-bottom: 1px dashed $borColor2;
+		float: left;
 		li{
 			a{
 				padding: 3px 10px;
+			}
+		}
+	}
+	.mid-panel{
+		border-bottom: 1px dashed $borColor2;
+		.showstyle{
+			margin-right: 10px;
+			li{
+				display: inline-block;
+				*display: inline;
+				zoom: 1;
+				font-size: 16px;
+				padding: 10px 0;
+				a{
+					color: #666666;
+					text-decoration: none;
+					display: block;
+					padding: 3px 5px;
+					margin-right: 3px;
+					&:hover{
+						text-decoration: none;
+					}
+				}
+			}
+			.active{
+				a{
+					color: $green;
+				}
 			}
 		}
 	}
@@ -853,16 +958,6 @@ footer{
 			text-decoration: none;
 		}
 	}
-	.hd{
-		border-bottom: 1px solid $borColor2;
-		font-size: 14px;
-		color: #999;
-		padding: 10px 0 8px 30px;
-		.glyphicon{
-			color: $green;
-			margin-right: 5px;
-		}
-	}
 	.main-cate{
 		margin-bottom: -1px;
 		li{
@@ -870,12 +965,18 @@ footer{
 			line-height: 50px;
 			font-size: 14px;
 			color: $global-FontMainColor;
-			border-bottom: 1px solid $borColor3;
-			margin: 0 30px;
+			padding: 0 30px;
 			cursor: pointer;
-		}
-		a{
-			display: block;
+			&:hover,&.open{
+				background-color: $green;
+				a,.glyphicon{
+					color: #fff;
+				}
+			}
+			a{
+				display: block;
+				border-bottom: 1px solid $borColor3;
+			}
 		}
 		.txt{
 			float: left;
@@ -886,49 +987,230 @@ footer{
 			color: $global-FontMainColor
 		}
 	}
-	.dropdown-menu{
-		position: absolute;
-		left: 100%;
-		top: -3px;
-		background-color: #fff;
-		z-index: 10;
-		border: 1px solid #dedede;
-		border-top: none;
-		width: 630px;
-		float: none;
-		border-radius: 0;
-		-webkit-box-shadow: none;
-		box-shadow: none;
-		padding: 30px 0;
-		margin: 0;
-		line-height: 30px;
+}
+
+.pn{
+	font-size: 0;
+}
+.book-thumbnail{
+	margin-bottom: 20px;
+	display: inline-block;
+	*display: inline;
+	zoom:1;
+	vertical-align: top;
+	float: none;
+	a{
+		color: #333;
+		font-size: 14px;
+		display: block;
+	}
+	.pic{
+		display: table;
+		height: 195px;
+		width: 100%;
+		text-align: center;
 		a{
-			white-space: nowrap;
+			display: table-cell;
+			vertical-align: bottom;
+		}
+		.img{
+			position: relative;
+			display: inline-block;
+			*display: inline;;
+			zoom:1;
+		}
+		.ico-ebook-2{
+			background: url(../images/ebook.png) no-repeat;
+			width: 50px;
+			height: 50px;
+			position: absolute;
+			bottom: 0;
+			right: 0;
 		}
 	}
-	.sidebar{
-		.media{
-			padding: 5px 0;
-			border-bottom: 1px solid #f2f2f2;
-			margin: 0 40px;
+	.name{
+		padding-top: 5px;
+	}
+}
+
+.ico-ebook{
+	background-position: -20px 0;
+}
+
+.article{
+	font-size: 14px;
+	padding-top: 15px;
+	border-bottom: 1px solid $borColor3;
+	.article-name{
+		a{
+			color: #333;
+			font-weight: bold;
 		}
-		.media-left{
-			padding-right: 20px;
-			.glyphicon{
-				float: none;
-				line-height: normal;
-				color: #999;
-				top: 2px;
-			}
-			a{
-				display: inline-block;
+	}
+	.media{
+		padding-top: 15px;
+		margin-top: 0;
+	}
+	.media-body{
+		padding-top: 0;
+	}
+	.article-img{
+		width: 120px;
+	}
+	.article-fd{
+		padding: 10px 0;
+		color: #999;
+		line-height: 20px;
+		.userPic{
+			width: 20px;
+			height: 20px;
+		}
+		.author{
+			padding: 0 10px;
+		}
+		.r-panel{
+			.i{
+				padding-left: 10px;
 			}
 		}
+	}
+}
+
+.article-2{
+	border-bottom: none;
+	.article-name{
+		white-space: nowrap;
+		height: 20px;
+		line-height: 20px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		word-break: normal;
+		word-wrap: normal;
+	}
+	.media{
+		padding-top: 0;
+		line-height: 20px;
+		max-height: 147px;
+		overflow: hidden;
+	}
+	.info{
+		padding: 5px 0 2px;
+	}
+	.article-fd{
+		padding-top: 5px;
+	}
+	.hot,.recom{
+		font-style: normal;
+		color: #fff;
+		background-color: #fbb3b3;
+		width: 20px;
+		height: 20px;
+		line-height: 20px;
+		vertical-align: middle;
+		display: inline-block;
+		*display: inline;
+		zoom: 1; 
+		text-align: center;
+		margin-right: 5px;
+	}
+	.recom{
+		background-color: #99dbd4;
+	}
+}
+
+.author-side{
+	text-align: center;
+	img{
+		width: 60px;
+		height: 60px;
+		max-width: none;
+	}
+	a{
+		color: #333;
+	}
+	.name{
+		display: block;
+		white-space: nowrap;
+		height: 20px;
+		line-height: 20px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		word-break: normal;
+		word-wrap: normal;
+		margin-top: 5px;
+	}
+	.item{
+		padding-top: 13px;
+		padding-bottom: 13px;
+	}
+	.media{
+		text-align: left;
+		font-size: 14px;
+		padding-bottom: 15px;
+		border-bottom: 1px solid $borColor3;
+		margin-top: 0;
+	}
+	.txt{
+		padding-top: 5px;
+	}
+	.t{
+		font-weight: bold;
+		border-bottom: 1px dashed $borColor2;
+		padding-bottom: 5px;
+	}
+}
+
+.book-side{
+	img{
+		max-width: none;
+	}
+	.book-pic{
+		width: 60px;
+	}
+	.t{
+		font-size: 14px;
+	}
+	.media{
+		border-bottom: 1px solid $borColor3;
+		margin-top: 0;
+		padding: 15px 10px 10px;
+	}
+}
+
+// 文章和图书在移动端下的样式
+@media (max-width: 768px){
+	.article,.book-lst{
 		.media-body{
-			a{
-				display: inline;
-				padding: 0 15px;
-				border-left: 1px solid $borColor2
+			display: block;
+			width: auto;
+			padding-top: 5px;
+		}
+		.article-fd{
+			.l-panel,.r-panel{
+				float: none!important;
+			}
+			.r-panel{
+				padding-top: 5px;
+				.i{
+					padding: 0 5px 0 0;
+				}
+			}
+		}
+	}
+	.book-lst{
+		.media-right{
+			display: block;
+			padding-left: 0;
+		}
+		.price-box{
+			border: none;
+			padding: 5px 0 0;
+			margin: 0;
+		}
+		.book-thumbnail{
+			padding-top: 10px;
+			.pic{
+				height: auto;
 			}
 		}
 	}
