--- a/website/epubit/static/scss/style.scss
+++ b/website/epubit/static/scss/style.scss
@@ -678,7 +678,7 @@ body{ background-color: $body-bg; font-size: 12px; line-height: 1.5em;}
 		width: 50px;
 		height: 50px;
 		margin-right: 20px;
-		background: url(../images/ico.png) no-repeat;
+		background: url(../images/qr-ico.png) no-repeat;
 	}
 	.wxqr{
 		a{
@@ -1215,3 +1215,214 @@ footer{
 		}
 	}
 }
+
+// 文章详情
+.article-detail{
+	padding: 20px;
+	font-size: 16px;
+	.article-tit{
+		font-size: 24px;
+		padding-bottom: 10px;
+		border-bottom: 1px solid $borColor3;
+		margin-bottom: 15px;
+	}
+}
+
+// 标签
+.tag-lst{
+	padding: 5px 0;
+	li{
+		margin-left: 15px;
+		float: left;
+		padding: 5px 0;
+		a{
+			display: block;
+			padding: 5px 8px;
+			background-color: $green;
+			color: #fff!important;
+			&:hover{
+				background-color: $nav-hover;
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+.tag-banner{
+	width: 100%;
+	padding: 40% 0 0 0;
+	background: #ccc;
+	position: relative;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	margin-bottom: 20px;
+	&:hover{
+		.data {
+		    background: rgba(0, 0, 0, 0.8);
+		}
+	}
+	.data {
+		background: rgba(0, 0, 0, 0.6);
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: 100px;
+		top: auto;
+		 h2 {
+			color: white;
+			font-size: 24px;
+			margin: 0;
+			a{
+				padding: 14px 14px 6px 14px;
+				color: white;
+				display: block;
+				&:hover{
+					text-decoration: none;
+				}
+			}
+		}
+	}
+}
+
+// 图书详情页
+.bookdetail-page{
+	background-color: #fff;
+	.bookdetail{
+		padding-top: 80px;
+		font-size: 14px;
+	}
+	.bookmenu{
+		a{
+			text-decoration: underline;
+			color: $green;
+		}
+	}
+	.booklststyle{
+		.form-horizontal{
+			.control-label{
+				text-align: left;
+				width: 75px;
+				padding: 7px 0 0 10px;
+			}
+			.form-group{
+				padding-left: 20px;
+				margin-bottom: 0px;
+				margin-top: 10px;
+			}
+			.col-sm-10{
+				width: auto;
+			}
+		}
+	}
+	.media{
+		img{
+			max-width: none;
+		}
+	}
+	.tag-lst{
+		li{
+			margin-left: 0;
+			margin-right: 10px;
+		}
+	}
+	.book-side{
+		margin-right: 0;
+		font-size: 12px;
+	}
+	.media{
+		margin-top: 20px;
+	}
+	.xgwz{
+		.media{
+			border-bottom: 1px solid $borColor2;
+			padding-bottom: 20px;
+			&:last-child{
+				border-bottom: none;
+			}
+		}
+	}
+	.tab{
+		color: $borColor2;
+		padding-top: 20px;
+		.active{
+			font-weight: bold;
+			color: #333;	
+		}
+		.stp{
+			padding: 0 5px;
+		}
+	}
+	.remark{
+		margin-left: 30px;
+		border: 1px solid $green;
+		margin-top: 20px;
+		.txt{
+			border: none;
+			width: 100%;
+			height: 90px;
+			padding: 10px;
+		}
+		.remark-btn-box{
+			padding: 5px;
+			background-color: #fbfbfb;
+		}
+	}
+	.btn-default{
+		color: #fff;
+		background-color: $green;
+		color: #fff!important;
+		&:hover{
+			background-color: $nav-hover;
+		}
+	}
+	.disabled{
+		background-color: #ccc;
+	}
+	.exchange{
+		padding-top: 10px;
+		.btn{
+			font-size: 18px;
+			margin-bottom: 5px;
+			margin-right: 10px;
+		}
+	}
+	.bookdetail-panel{
+		margin-bottom: 20px;
+		margin-top: 10px;
+	}
+}
+
+.g-block-2{
+	margin-bottom: 30px;
+	.hd{
+		padding: 10px 20px;
+		border-left: 9px solid $green;
+		background-color: #f7f7f7;
+		.tit{
+			font-size: 18px;
+		}
+	}
+	.bd{
+		padding-left: 30px;
+		li{
+			margin-top: 10px;
+		}
+		a{
+			color: $green;
+		}
+	}
+	.more{
+		display: block;
+		width: 100%;
+		text-align: center;
+		background-color: #e5f6f4;
+		color: $green;
+		font-size: 12px;
+		padding: 5px 0;
+		margin-top: 10px;
+	}
+}
+
+
