--- a/website/epubit/static/scss/style.scss
+++ b/website/epubit/static/scss/style.scss
@@ -1022,8 +1022,7 @@ footer{
 			*display: inline;;
 			zoom:1;
 			img{
-				max-height: 210px;
-				max-width: none;
+				max-width: 100%;
 			}
 		}
 		.ico-ebook-2{
@@ -1297,13 +1296,19 @@ footer{
 .bookdetail-page{
 	background-color: #fff;
 	.bookdetail{
-		padding-top: 80px;
+		padding-top: 90px;
 		font-size: 14px;
 	}
 	.bookmenu{
+		td{
+			padding-left: 30px;
+		}
 		a{
-			text-decoration: underline;
 			color: $green;
+		}
+		.read-btn{
+			float: right;
+			padding-right: 17px;
 		}
 	}
 	.booklststyle{
@@ -1398,14 +1403,119 @@ footer{
 	.bookdetail-panel{
 		margin-bottom: 20px;
 		margin-top: 10px;
+		.media-left{
+			padding-right: 30px;
+			img{
+				border: 1px solid $borColor2;
+				padding: 8px;
+				vertical-align: top;
+				width: 231px;
+				height: 309px;
+			}
+		}
+		.bookDeHd{
+			border-bottom: 4px solid $borColor2;
+			margin-bottom: 10px;
+			padding-bottom: 10px;
+			h2{
+				font-size: 24px;
+			}
+			.author{
+				padding: 10px 0 0;
+				span{
+					padding-right: 20px;
+				}
+			}
+			.bor-r-g{
+				border-right: 1px solid $borColor2;
+			}
+			.r-panel{
+				margin-top: -10px;
+				a{
+					padding: 10px 15px;
+					display: inline-block;
+					*display: inline;
+					zoom: 1;
+					text-align: center;
+					color: #999;
+					&:hover{
+						text-decoration: none;
+						color: $green;
+					}
+				}
+				.has{
+					.glyphicon{
+						color: $green;
+					}
+				}
+				.top{
+					font-size: 24px;
+					padding-bottom: 5px;
+					display: block;
+				}
+				.txt{
+					display: block;
+					font-size: 18px;
+				}
+			}
+		}
+		.bookDeBd{
+			font-size: 14px;
+			line-height: 24px;
+		}
+		.bookDeFd{
+			background-color: #e3f5f3;
+			padding: 20px 0 20px 30px;
+			margin-top: 10px;
+			.stp{
+				display: inline-block;
+				*display: inline;
+				zoom: 1;
+				height: 105px;
+				width: 1px;
+				overflow: hidden;
+				background-color: #b6e5e0;
+				vertical-align: middle;
+				margin-left: 20px;
+			}
+			ul{
+				display: inline-block;
+				*display: inline;
+				zoom: 1;
+				vertical-align: middle;
+				white-space: nowrap;
+			}
+			.btn{
+				vertical-align: middle;
+				font-size: 18px;
+				border-radius: 0;
+				margin-left: 20px;
+			}
+			.btn-box{
+				display: inline-block;
+				*display: inline;
+				zoom: 1;
+				vertical-align: middle;
+			}
+			label{
+				font-size: 14px;
+				font-weight: normal;
+				padding: 3px 0;
+			}
+			.price{
+				color: $green;
+				padding-left: 10px;
+				font-size: 18px;
+			}
+		}
 	}
 }
+
 
 .g-block-2{
 	margin-bottom: 30px;
 	.hd{
-		padding: 10px 20px;
-		border-left: 9px solid $green;
+		padding: 10px 20px 10px 30px;
 		background-color: #f7f7f7;
 		.tit{
 			font-size: 18px;
@@ -1427,8 +1537,10 @@ footer{
 		background-color: #e5f6f4;
 		color: $green;
 		font-size: 12px;
-		padding: 5px 0;
+		height: 40px;
+		line-height: 40px;
 		margin-top: 10px;
+		border: 1px solid #99dbd4;
 	}
 }
 
@@ -1443,3 +1555,106 @@ footer{
 	}
 }
 
+.breadcrumb{
+	font-size: 0;
+	background: none;
+	padding: 0;
+	margin-bottom: 0;
+	li{
+		font-size: 16px;
+		a{
+			color: #333;
+		}
+	}
+}
+.breadcrumb>li+li:before{
+	content: ">";
+	color: #333;
+}
+
+label{
+	input[type=checkbox], input[type=radio],span{
+		display: inline-block;
+		*display: inline;
+		zoom: 1;
+		vertical-align: middle;
+		margin: 0 5px 0 0; 
+	}
+}
+
+
+@media (max-width: 1200px){
+	.bookdetail-page .bookdetail-panel .bookDeFd .btn{
+		margin-left: 10px 
+	}
+	
+}
+
+@media (max-width: 991px){
+	.bookdetail-page .bookdetail-panel .bookDeFd .btn-box{
+		padding-top: 10px;
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd .btn{
+		margin-left: 0;
+		margin-right: 10px; 
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd .stp{
+		display: none;
+	}
+}
+
+@media (max-width: 768px){
+	body{
+		overflow-x: hidden; 
+	}
+	.bookdetail-panel .media-left{
+		display: block;
+	}
+	.bookdetail-panel .media-left,.bookdetail-panel .media-body .bookDeHd{
+		text-align: center;
+	}
+	.bookdetail-panel .media-body{
+		display: block;
+		width: auto;
+		.l-panel,.r-panel{
+			float: none!important;
+		}
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd{
+		padding: 10px 0 10px 10px;
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd .btn-box{
+		padding-top: 10px;
+		display: block;
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd .btn{
+		margin-left: 0;
+		margin-right: 5px; 
+		margin-bottom: 10px;
+	}
+	.bookdetail-page .bookdetail-panel .bookDeFd .stp{
+		display: block;
+		height: 0;
+	}
+	.g-block-2 .hd{
+		padding-left: 10px;
+	}
+	.g-block-2 .bd{
+		padding-left: 10px;
+	}
+	.bookdetail-page .remark{
+		margin-left: 10px;
+	}
+}
+
+.modal-body{
+	font-size: 14px;
+	line-height: 22px;
+}
+
+.modal-title{
+	font-size: 18px;
+	.submodalt{
+		font-size: 14px;
+	}
+}
